Bug 25366 - ICE in do_resolve_class
Summary: ICE in do_resolve_class
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: java (show other bugs)
Version: 4.2.0
: P3 normal
Target Milestone: 4.1.0
Assignee: Andrew Haley
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-12 11:56 UTC by Jakub Jelinek
Modified: 2006-01-29 17:39 UTC (History)
3 users (show)

See Also:
Host:
Target: x86_64-linux
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-12-12 15:34:48


Attachments
org.tar.bz2 (279.10 KB, application/octet-stream)
2005-12-12 11:57 UTC, Jakub Jelinek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jakub Jelinek 2005-12-12 11:56:37 UTC
redhat/gcc-4_1-branch GCC as well as trunk ICEs on:
/usr/src/gcc/obj3/gcc/jc1 \ org/eclipse/jdt/internal/compiler/problem/AbortCompilationUnit.java -quiet \ -dumpbase AbortCompilationUnit.java -mtune=k8 -auxbase-strip NONE -g1 \ -Wno-deprecated -version -fsyntax-only -femit-class-files -o /dev/null \ -fclasspath=.:usr/share/java/libgcj-4.1.0.jar
GNU Java version 4.2.0 20051212 (experimental) (x86_64-unknown-linux-gnu)
        compiled by GNU C version 4.0.2 20051125 (Red Hat 4.0.2-8).
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
Class path starts here:
    ./
    usr/share/java/libgcj-4.1.0.jar/ (zip)
    /usr/local/share/java/libgcj-4.2.0.jar/ (system) (zip)
./org/eclipse/jdt/internal/compiler/codegen/Label.java:263: internal compiler error: Segmentation fault
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.

I'll attach the .java files.
Comment 1 Jakub Jelinek 2005-12-12 11:57:47 UTC
Created attachment 10456 [details]
org.tar.bz2

The ICE is in do_resolve_class, because current_class seems to be NULL.
Comment 2 Andrew Haley 2005-12-13 09:41:50 UTC
Subject: Bug 25366

Author: aph
Date: Tue Dec 13 09:41:45 2005
New Revision: 108474

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=108474
Log:
2005-12-13  Andrew Haley  <aph@redhat.com>

        PR java/25366
        PR java/25368
        * class.c (maybe_layout_super_class): Update current_class before
        calling do_resolve_class.


Modified:
    trunk/gcc/java/ChangeLog
    trunk/gcc/java/class.c

Comment 3 Andrew Haley 2005-12-13 09:44:40 UTC
Subject: Bug 25366

Author: aph
Date: Tue Dec 13 09:44:35 2005
New Revision: 108475

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=108475
Log:
2005-12-13  Andrew Haley  <aph@redhat.com>

        PR java/25366
        PR java/25368
        * class.c (maybe_layout_super_class): Update current_class before
        calling do_resolve_class.



Modified:
    branches/gcc-4_1-branch/gcc/java/ChangeLog
    branches/gcc-4_1-branch/gcc/java/class.c

Comment 4 Andrew Pinski 2006-01-29 17:39:23 UTC
Fixed in 4.1.0.